# CLUCalcSource-4.3.3

./: BUILD_ALL  COMPILE_ALL  ENV  INSTALL  README.md  SETUP_ALL
CLUCalc-4.3.2/: BUILD  CLUCalc_Install.txt  Makefile  Makefile.am  Makefile.in  SETUP  config.status  configure  configure.in  libtool
CLUCalc-4.3.2/CLUCalcDoc/: CLUCalcDoc.dox  doxygen.ini  mathdef_env1.tex  mathdef_op1.tex  mathdef_sym1.tex  page_CLUCalc.dox  page_Ideas.dox  page_License.dox  page_RelLog.dox
CLUCalc-4.3.2/Documentation/: formula.repository  group__grp__GAFunc.html  group__grp__ImageFunc.html  group__grp__LatexFunc.html  group__grp__List.html  group__grp__Logic.html  group__grp__MathConst.html  group__grp__MathFunc.html  group__grp__Matrix.html  group__grp__Misc.html  group__grp__VarMVStyle.html  group__grp__VarMisc.html  page_ChangeLog.html  page_ErrProp.html  page_SolveMVEqns.html  page_TheLanguage.html  page_UserInteraction.html  page_WorkWithMV.html  page_WorkWithMat.html  page_WorkWithTensors.html  search.idx  todo.html
CLUCalc-4.3.2/ExampleScripts/: Animate1.clu  ArcTest1.clu  ArcTest2.clu  ArrayVis1.clu  BGColorAndFrame.clu  BrownianMotion.clu  CanalSurf1.clu  CircleSurfaceTest1.clu  Color1.clu  Cone1.clu  ConfVis1.clu  ConicIntersect1.clu  Desargues2.clu  ExtListTest1.clu  FuncListTest1.clu  GenCheckPattern.clu  GradeList.clu  Gravitation2.clu  Gravitation3.clu  Intro.clu  Intro_4_1.clu  Intro_4_2.clu  Intro_4_3.clu  Inversion2.clu  KeyTest1.clu  KeyTest2.clu  KleinBottle.clu  KleinBottle2.clu  LatexIntro1.clu  LightTest1.clu  LightTest2.clu  LightTest3.clu  LightTest4.clu  LineP3.clu  ListIdxTest1.clu  MacroExample1.clu  MatrixIdxTest1.clu  MatrixLogic1.clu  MatrixSVD.clu  MatrixSVDExample1.clu  (+39 more)
CLUCalc-4.3.2/ExampleScripts/2D_Conics/: ConicEx1.clu  ConicEx2.clu  ConicIntersect1.clu  ReflectorC2Test1.clu  RotorC2Test1.clu
CLUCalc-4.3.2/ExampleScripts/Images/: ImageEx1.clu  ImageEx2.clu  ImageEx3.clu  ImageEx4.clu  ImageEx5.clu  ImageEx6.clu  ImageEx7.clu  ImageEx8.clu  ImageEx9.clu  ImageTest1.clu  ImageTest2.clu
CLUCalc-4.3.2/ExampleScripts/Presentation1/: header.tex  intro_1.clu  intro_start.clu  start.clu  stdslide.clu
CLUCalc-4.3.2/ExampleScripts/TextureMapping/: SphereProj1.clu  TextureEx1.clu  TextureEx2.clu  TextureEx3.clu  TextureEx4.clu  TextureEx5.clu  TextureEx6.clu  TextureEx7.clu
CLUCalc-4.3.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
CLUCalc-4.3.2/source/: CLUCalc.cpp  CLUCalc.rc  CLUCalc_v3.rtf  CLUOutput.cpp  CLUOutput.h  CLUScriptEditor.cpp  CLUScriptEditor.h  FLTKEditor.cpp  FLTKEditor.h  FLTKOutput.cpp  FLTKOutput.h  Makefile  Makefile.am  Makefile.in  OGLWin.cpp  OGLWin.h  StdAfx.cpp  StdAfx.h  resource.h
CLUCalc-4.3.2/source/.deps/: CLUCalc.Po  CLUOutput.Po  CLUScriptEditor.Po  FLTKEditor.Po  FLTKOutput.Po  OGLWin.Po
CLULibs-2.3.0/: BUILD  CLULibs_Install.txt  Makefile  Makefile.am  Makefile.in  cluproject.pc  cluproject.pc.in  config.status  configure  configure.in  libtool
CLULibs-2.3.0/CLU/: CLU.vcproj  Header.txt  Makefile  Makefile.am  Makefile.in
CLULibs-2.3.0/CLU/source/: Array2D.cxx  Array2D.h  Array2DObj.cxx  Array2DObj.h  CLUDebug.h  CLUException.cpp  CLUException.h  Cl22.cxx  Cl22.h  Cl22Tables.h  Cl22inst.h  ConfGATables.h  E3GATables.h  El2GATables.h  ExMinFunc.cpp  ExMinFunc.h  GA1p2m.cxx  GA1p2m.h  GA1p2mInst.h  MVInfo.cxx  MVInfo.h  Macopt.cpp  Macopt.h  Makefile  Makefile.am  Makefile.in  MemBase.cpp  MemBase.h  MessageList.cxx  MessageList.h  MinFuncBase.h  Notify.cpp  Notify.h  PGATables.h  Point.h  STATables.h  StaticArray.cxx  StaticArray.h  StrMessageList.cpp  StrMessageList.h  (+88 more)
CLULibs-2.3.0/CLUDraw/: CLUDraw.vcproj  Header.txt  Makefile  Makefile.am  Makefile.in
CLULibs-2.3.0/CLUDraw/source/: CLUDrawBase.cpp  CLUDrawBase.h  FLTKToolBox.cpp  FLTKToolBox.h  Font_FixedSys_Bold_9.h  Font_FixedSys_Std_9.h  Font_Sylfaen_Bold_24.h  Font_Symbol_Bold_12.h  Font_Symbol_Std_12.h  Font_Symbol_Std_24.h  Font_T2_Std_12.h  Font_T2_Std_24.h  Font_TimesNewRoman_Std_12.h  IOGLWinBase.h  Makefile  Makefile.am  Makefile.in  OGLBaseElement.cpp  OGLBaseElement.h  OGLBaseElementList.cpp  OGLBaseElementList.h  OGLBaseObject.cpp  OGLBaseObject.h  OGLBaseTransform.cpp  OGLBaseTransform.h  OGLBitmap.cpp  OGLBitmap.cpp~  OGLBitmap.h  OGLBitmapText.cpp  OGLBitmapText.h  OGLColor.cpp  OGLColor.h  OGLDisplayList.cpp  OGLDisplayList.h  OGLFilterE3.cpp  OGLFilterE3.h  OGLFilterEl2.cpp  OGLFilterEl2.h  OGLFilterN3.cpp  OGLFilterN3.h  (+45 more)
CLULibs-2.3.0/CLUParse/: CLUParse.vcproj  Header.txt  Makefile  Makefile.am  Makefile.in  Readme.txt
CLULibs-2.3.0/CLUParse/CLUScriptDoc/: CLUScriptDocMain.dox  func_Draw.dox  func_ErrProp.dox  func_File.dox  func_GA.dox  func_Images.dox  func_Info.dox  func_Latex.dox  func_Lighting.dox  func_List.dox  func_Logic.dox  func_Math.dox  func_Matrix.dox  func_Misc.dox  func_Mouse.dox  func_Presentation.dox  func_Random.dox  func_SerialPort.dox  func_Tensor.dox  func_Tools.dox  page_Animation.dox  page_ChangeLog.dox  page_ErrProp.dox  page_GettingStarted.dox  page_Images.dox  page_Info.dox  page_Latex.dox  page_Presentation.dox  page_SerialPort.dox  page_SolveMVEqns.dox  page_TextureMapping.dox  page_TheLanguage.dox  page_Tools.dox  page_UserInteraction.dox  page_WorkWithMV.dox  page_WorkWithMat.dox  page_WorkWithTensors.dox  pre_All.dox  var_Color.dox  var_DrawStyle.dox  (+3 more)
CLULibs-2.3.0/CLUParse/source/: CLUCodeBase.cpp  CLUCodeBase.h  CLUCodeBase_BMP.cpp  CLUCodeBase_BitmapFont.cpp  CLUCodeBase_Draw.cpp  CLUCodeBase_ErrorProp.cpp  CLUCodeBase_File.cpp  CLUCodeBase_GA.cpp  CLUCodeBase_Info.cpp  CLUCodeBase_Latex.cpp  CLUCodeBase_Light.cpp  CLUCodeBase_List.cpp  CLUCodeBase_Math.cpp  CLUCodeBase_Matrix.cpp  CLUCodeBase_Operators.cpp  CLUCodeBase_Present.cpp  CLUCodeBase_SerialIO.cpp  CLUCodeBase_String.cpp  CLUCodeBase_Tensor.cpp  CLUCodeBase_Tool.cpp  CLUParse.cpp  CLUParse.h  CodeBase.cpp  CodeBase.h  CodeBinaryOperator.cpp  CodeBinaryOperator.h  CodeBreak.cpp  CodeBreak.h  CodeCreateRefVarList.cpp  CodeCreateRefVarList.h  CodeData.cpp  (+95 more)
CLULibs-2.3.0/autom4te.cache/: output.0  output.1  traces.0  traces.1
(+818 files in other folders)
