lib_LIBRARIES		= libCLU.a

libCLU_a_SOURCES	= Notify.cpp \
			  rand.cpp \
			  StrMessageList.cpp \
			  statistic.cpp \
			  ExMinFunc.cpp \
			  xgaext2.cpp xgaext2_float.cpp xgaext2_double.cpp \
			  Macopt.cpp \
			  xgalib2.cpp \
			  makestr.cpp xmalib.cpp \
			  MemBase.cpp mathelp.cpp \
			  cstr.cpp xutlib.cpp \
			  CLUException.cpp \
			  balanc.c balbak.c elmbak.c elmhes.c eltran.c \
			  hqr.c hqr2.c pnorm.c

clu_includedir = $(includedir)/clu

clu_include_HEADERS		= clu.h Notify.h \
				      rand.h \
				      StrMessageList.h \
				      statistic.h \
				      ExMinFunc.h \
				  xgaext2.h \
				  Macopt.h \
				xgalib2.h \
				      makestr.h xmalib.h xoplib.h \
					  MemBase.h mathelp.h \
				      cstr.h xutlib.h eispack.h \
					Array2D.cxx MVInfo.cxx bladelist.cxx \
		 	        mvs.cxx tensor.cxx Array2DObj.cxx MessageList.cxx \
					cga.cxx matrix.cxx pga.cxx StaticArray.cxx confga.cxx \
			        mem.cxx ringbuf.cxx Cl22.cxx base.cxx dynlist.cxx \
			        memobj.cxx sta.cxx GA1p2m.cxx blade.cxx e3ga.cxx \
				el2ga.cxx multiv.cxx \
					Array2D.h MVInfo.h bladelist.h \
		 	        mvs.h tensor.h Array2DObj.h MessageList.h \
					cga.h matrix.h pga.h StaticArray.h confga.h \
			        mem.h ringbuf.h Cl22.h base.h dynlist.h \
			        memobj.h sta.h GA1p2m.h blade.h e3ga.h \
				el2ga.h el2gainst.h El2GATables.h \
				multiv.h Point.h pgainst.h stainst.h \
					e3gainst.h GA1p2mInst.h confgainst.h \
					matinst.h tensinst.h cgainst.h \
					ringbinst.h MinFuncBase.h \
			PGATables.h STATables.h E3GATables.h ConfGATables.h \
			Cl22inst.h Cl22Tables.h \
		TensorData.cxx TensorData.h \
		TensorIdx.cxx TensorIdx.h \
		TensorSingleLoop.cxx TensorSingleLoop.h \
		TensorDoubleLoop.cxx TensorDoubleLoop.h \
		TensorPointLoop.cxx TensorPointLoop.h \
		TensorContractLoop.cxx TensorContractLoop.h \
		TensorOperators.cxx TensorOperators.h \
		CLUDebug.h CLUException.h


