lib_LIBRARIES		= libCLUDraw.a

libCLUDraw_a_SOURCES	=  OGLDisplayList.cpp OGLVexListE3.cpp \
			   CLUDrawBase.cpp OGLFilterE3.cpp     \
			   OGLVexListN3.cpp OGLFilterN3.cpp  OGLFilterEl2.cpp  \
		       	OGLVexListP2.cpp   \
		       	OGLFilterP2.cpp  OGLVexListP3.cpp   \
			OGLFilterP3.cpp        \
			OGLWinGLUT.cpp  OGLWinFLTK.cpp    \
			OGLLight.cpp OGLWinMFCstatic.cpp    \
			OGLMVFilter.cpp OGLWindow.cpp       \
		       	OGLBaseElement.cpp OGLMVFilterBase.cpp \
		       	StdAfx.cpp OGLBaseElementList.cpp   \
		       	OGLMaterial.cpp TempLib.cpp		   \
			OGLBaseObject.cpp OGLObjColorCube.cpp \
			OGLBaseTransform.cpp OGLVertex.cpp \
			OGLColor.cpp OGLVertexList.cpp OGLLatexText.cpp \
			OGLBitmap.cpp OGLBitmapText.cpp \
			FLTKToolBox.cpp asc85ec.c jpeg2ps.c readjpeg.c

clu_includedir = $(includedir)/clu

clu_include_HEADERS = 	   cludraw.h OGLDisplayList.h OGLVexListE3.h \
			   CLUDrawBase.h OGLFilterE3.h     \
			   OGLVexListN3.h OGLFilterN3.h  OGLFilterEl2.h \
		       	OGLVexListP2.h   \
			OGLFilterP2.h  OGLVexListP3.h   \
			OGLFilterP3.h  OGLWinFLTK.h      \
			   OGLWinGLUT.h IOGLWinBase.h     \
			   OGLLight.h OGLWinMFCstatic.h    \
			   OGLMVFilter.h OGLWindow.h       \
		       OGLBaseElement.h OGLMVFilterBase.h \
		       StdAfx.h OGLBaseElementList.h   \
		       OGLMaterial.h		   \
			   OGLBaseObject.h OGLObjColorCube.h \
			   OGLBaseTransform.h OGLVertex.h \
			   OGLColor.h OGLVertexList.h OGLLatexText.h \
			OGLBitmap.h OGLBitmapText.h bmpdef.h \
				FLTKToolBox.h \
			Font_FixedSys_Std_9.h Font_FixedSys_Bold_9.h \
		Font_Symbol_Std_12.h Font_Symbol_Bold_12.h \
		Font_Symbol_Std_24.h Font_TimesNewRoman_Std_12.h \
		Font_Sylfaen_Bold_24.h Font_T2_Std_12.h \
		Font_T2_Std_24.h psimage.h



INCLUDES = -I$(srcdir)/../../CLU/source -I@CLU_OPENGL@/include -I@CLU_GLUT@/include -I$(DEVIL_HOME)/include



